added routes and replaced users with trainers
